source/blender/blenkernel/BKE_animsys.h
@@ -39,6 +39,7 @@ struct FCurve;
 struct ID;
 struct KS_Path;
 struct KeyingSet;
+struct LibraryForeachIDData;
 struct ListBase;
 struct Main;
 struct NlaKeyframingContext;
@@ -101,6 +102,9 @@ struct KS_Path *BKE_keyingset_find_path(struct KeyingSet *ks,
 
 /* Copy all KeyingSets in the given list */
 void BKE_keyingsets_copy(struct ListBase *newlist, const struct ListBase *list);
+
+/** Process the ID pointers inside a scene's keyingsets, in see `BKE_lib_query.h` for details. */
+void BKE_keyingsets_foreach_id(struct LibraryForeachIDData *data, const struct ListBase *keyingsets);
 
 /* Free the given Keying Set path */
 void BKE_keyingset_free_path(struct KeyingSet *ks, struct KS_Path *ksp);
